# NotificationService

./: .gitignore  .gitmodules  Dockerfile  docker-compose.yml  pyproject.toml
notification_service/: config.py  email_actor.py  main.py  queue_manager.py  schemas.py
notification_service/templates/: finished_test.html  verification_token.html
