[tool.poetry]
name = "notification_service"
version = "0.1.0"
description = ""
authors = ["Adamozo <naworsk.adam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pykka = "^4.0.2"
confluent-kafka = "^2.4.0"
Jinja2 = "^3.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
